@@ -57,7 +57,7 @@
               libthrift;scope=compile|runtime;type=!pom;inline=false,
               cassandra;scope=compile|runtime;type=!pom;inline=false,
               <!-- *;scope=compile|runtime;type=!pom;inline=false -->
-            </Embed-Dependency> 
+            </Embed-Dependency>
 
             <Export-Package>
               <!-- !${bundle.namespace}.internal.*, -->
@@ -136,7 +136,7 @@
       <version>1.2.14</version>
       <scope>runtime</scope>
       <optional>true</optional>
-    </dependency>            
+    </dependency>
     <dependency>
       <groupId>org.perf4j</groupId>
       <artifactId>perf4j</artifactId>
@@ -217,7 +217,7 @@
     <dependency>
       <groupId>org.apache.cassandra</groupId>
       <artifactId>cassandra-javautils</artifactId>
-      <version>0.7.0</version>     
+      <version>0.7.0</version>
     </dependency>
     <dependency>
       <groupId>org.springframework</groupId>
@@ -238,16 +238,21 @@
       </exclusions>
     </dependency>
     <dependency>
+      <groupId>com.eaio.uuid</groupId>
+      <artifactId>uuid</artifactId>
+      <version>3.2</version>
+    </dependency>
+    <dependency>
       <groupId>org.springframework</groupId>
       <artifactId>spring-test</artifactId>
-      <version>${org.springframework.version}</version>   
-      <scope>test</scope>               
+      <version>${org.springframework.version}</version>
+      <scope>test</scope>
     </dependency>
     <dependency>
       <groupId>com.google.guava</groupId>
       <artifactId>guava</artifactId>
       <version>r06</version>
-      <scope>test</scope>               
+      <scope>test</scope>
     </dependency>
     <dependency>
       <groupId>org.apache.hadoop</groupId>
@@ -260,7 +265,7 @@
       <artifactId>jackson-mapper-asl</artifactId>
       <version>1.4.0</version>
       <scope>test</scope>
-    </dependency>    	
+    </dependency>
     <dependency>
       <groupId>org.codehaus.jackson</groupId>
       <artifactId>jackson-core-asl</artifactId>
@@ -272,13 +277,13 @@
       <artifactId>jetty</artifactId>
       <version>6.1.21</version>
       <scope>test</scope>
-    </dependency>	
+    </dependency>
     <dependency>
       <groupId>org.mortbay.jetty</groupId>
       <artifactId>jetty-util</artifactId>
       <version>6.1.21</version>
       <scope>test</scope>
-    </dependency>    
+    </dependency>
     <dependency>
       <groupId>snakeyaml</groupId>
       <artifactId>snakeyaml</artifactId>
