@@ -9,6 +9,7 @@ Changes by version:
 ========
 Fix issue with LeastActiveBalancingPolicy that favoured same host repeatedly
 Define ClockResolution as an Interface to allow client to define their own implementations
+Added TimeUUID support (me.prettyprint.cassandra.utils.TimeUUIDUtils)
 
 
 0.7.0-21
